# mcu-sim

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap  configure.ac
build-aux/: git-version-gen
src/: argv.c  argv.h  armv7m.c  armv7m.h  main.c
tests/: argv.c  armv7m.c  armv7m.ld  armv7m.mk  cmocka.c  cmocka.h  startup.c
